--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,126 +1,108 @@
-name: main
+name: Generate Stats Images
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  schedule:
+    - cron: "0 0 * * *"  # Every day at midnight UTC
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-  test:
+  stats:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
+    # Check out repository under $GITHUB_WORKSPACE, so the job can access it
+    - uses: actions/checkout@v3
 
-      - run: bun install --frozen-lockfile
+    # Run using Python 3.8 for consistency and aiohttp
+    - name: Cài đặt Python 3.8
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+        architecture: 'x64'
+        cache: 'pip'
 
-      - run: npm run type
-      - run: npm run lint
-      - run: bun test
+    # Install dependencies with `pip`
+    - name: Cài đặt dependencies
+      run: |
+        python3 -m pip install --upgrade pip setuptools wheel
+        python3 -m pip install -r requirements.txt
+
+    # Generate all statistics images
+    - name: Tạo ảnh thống kê
+      run: |
+        python3 --version
+        python3 generate_images.py
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        EXCLUDED: ${{ secrets.EXCLUDED }}
+        EXCLUDED_LANGS: ${{ secrets.EXCLUDED_LANGS }}
+        EXCLUDE_FORKED_REPOS: ${{ secrets.EXCLUDE_FORKED_REPOS }}
+
+    - name: Chuẩn bị số liệu thống kê để triển khai
+      run: |
+          mkdir -p dist/assets/stats
+          # copy outputs from common places (adjust if your generate_images.py writes elsewhere)
+          if [ -d generated ]; then
+            cp -r generated/* dist/assets/stats/ || true
+          else
+            cp -r *.svg dist/assets/stats/ || true
+          fi
+
+    - name: Upload stats artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: stats-artifact
+        path: dist/assets/stats
+
+  snake:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
+    steps:
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/assets/snake/github-contribution-grid-snake.svg
+            dist/assets/snake/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Upload snake artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snake-artifact
+          path: dist/assets/snake
 
-  test-action:
+  deploy:
     runs-on: ubuntu-latest
+    needs: [stats, snake]
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: update action.yml to use image from local Dockerfile
-        run: |
-          sed -i "s/image: .*/image: Dockerfile/" action.yml
-
-      - name: generate-snake-game-from-github-contribution-grid
-        id: generate-snake
-        uses: ./
+      - name: Tải xuống thống kê Stats
+        uses: actions/download-artifact@v4
         with:
-          github_user_name: platane
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake-ocean.svg?color_snake=orange&color_dots=#dadcdf94,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-            dist/github-contribution-grid-snake-grey.svg?color_snake=111&color_dots=#eee,#aaa,#888,#666,#444
-            dist/github-contribution-grid-snake.gif
-            dist/github-contribution-grid-snake-ocean.gif?color_snake=orange&color_dots=#dadcdf94,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          name: stats-artifact
+          path: dist/assets/stats
 
-      - name: ensure the generated file exists
-        run: |
-          ls dist
-          test -f dist/github-contribution-grid-snake.svg
-          test -f dist/github-contribution-grid-snake-dark.svg
-          test -f dist/github-contribution-grid-snake-ocean.svg
-          test -f dist/github-contribution-grid-snake-grey.svg
-          test -f dist/github-contribution-grid-snake.gif
-          test -f dist/github-contribution-grid-snake-ocean.gif
-
-      - uses: crazy-max/ghaction-github-pages@v4.2.0
+      - name: Tải xuống thống kê Snake
+        uses: actions/download-artifact@v4
         with:
-          target_branch: output
+          name: snake-artifact
+          path: dist/assets/snake
+
+      - name: Triển khai tới gh-output (đẩy một lần, ghi đè lên các tệp)
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: gh-output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  test-action-svg-only:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-
-      - run: bun install --frozen-lockfile
-
-      - name: build svg-only action
-        run: |
-          npm run build:action
-          rm -r svg-only/dist
-          mv packages/action/dist svg-only/dist
-
-      - name: generate-snake-game-from-github-contribution-grid
-        id: generate-snake
-        uses: ./svg-only
-        with:
-          github_user_name: platane
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake-ocean.svg?color_snake=orange&color_dots=#dadcdf94,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-            dist/github-contribution-grid-snake-grey.svg?color_snake=111&color_dots=#eee,#aaa,#888,#666,#444
-
-      - name: ensure the generated file exists
-        run: |
-          ls dist
-          test -f dist/github-contribution-grid-snake.svg
-          test -f dist/github-contribution-grid-snake-dark.svg
-          test -f dist/github-contribution-grid-snake-ocean.svg
-          test -f dist/github-contribution-grid-snake-grey.svg
-
-      - uses: crazy-max/ghaction-github-pages@v4.2.0
-        with:
-          target_branch: output-svg-only
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  deploy-ghpages:
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-
-      - run: bun install --frozen-lockfile
-
-      - run: npm run build:demo
-        env:
-          GITHUB_USER_CONTRIBUTION_API_ENDPOINT: https://github-user-contribution.platane.workers.dev/github-user-contribution/
-
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: packages/demo/dist
-
-      - uses: actions/deploy-pages@v4
-        if: success() && github.ref == 'refs/heads/main'
-
-      - run: bunx wrangler deploy
-        if: success() && github.ref == 'refs/heads/main'
-        working-directory: packages/github-user-contribution-service
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
