chore: cập nhật các phụ thuộc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Generate Stats Images
+name: Tạo thống kê GitHub
 
 on:
   push:
@@ -18,8 +18,8 @@ jobs:
     # Check out repository under $GITHUB_WORKSPACE, so the job can access it
     - uses: actions/checkout@v3
 
-    # Run using Python 3.8 for consistency and aiohttp
-    - name: Cài đặt Python 3.8
+    # Run using Python 3.13 for consistency and aiohttp
+    - name: Cài đặt Python 3.13
       uses: actions/setup-python@v4
       with:
         python-version: '3.13'
